fix[Auth] : Add CORS configuration and it works.